feat: educational
